2006-12-10  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Add section on backwards compatibility and
	deprecated syntax.  Remove some trailing whitespace.

2006-12-09  Ethan Merritt  <merritt@u.washington.edu>

	* demo/all.dem demo/html/index.save demo/html/Makefile demo/image2.dem
	demo/image.dem: Split image demo into two pieces.

	* demo/image.dem demo/image2.dem docs/gnuplot.doc: Add emf to the list
	of drivers supporting image plot styles.

	* demo/borders.dem: Replace deprecated syntax `defined(bb)` with
	`exists("bb")`.

	* configure.in: Make backwards compatibility with deprecated syntax and
	terminal options an explicit configuration choice. Defaults to 
	--disable-backwards-compatibility
	This should give us plenty of time to find any bugs exposed by 
	dropping the deprecated code.

	* term/gd.trm (PNG_graphics): Ignore the current values of "set size"
	when creating an output image.  Image size is controlled only by 
	"set term {png|jpeg|gif} size XX,YY". 
	
	This change brings all terminal types except PostScript into conformity
	with the distinct meanings of "set size" and "set term ... size".
	"set size" scales the plot; "set term ... size"  changes the size of the
	canvas on which the plot is drawn.

	* docs/gnuplot.doc: Document the intended distinction between 
	'set size' and 'set term <foo> size'

2006-12-08  Johannes Zellner <johannes@zellner.org>

	* docs/gnuplot.doc: added emf to the list of file formats which can do
	pm3d.

2006-12-07  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in: Fix use of --without-kpsexpand

2006-12-07  Johannes Zellner <johannes@zellner.org>

	* term/emf.trm: implemented pm3d and point types according to the
	suggestion in term/README.

2006-12-07  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot3d.c (get_3ddata): If the first data file is non-empty but
	has no usable data, then auto-scaling fails. Instead of a fatal error,